# FastQSP

./: .gitignore  CMakeLists.txt  FastQSP.pro
gui/: CMakeLists.txt  fastqspwindow.cpp  fastqspwindow.h  gui.pro  main.cpp
gui/src/: ExecUrlSchemeHandler.cpp  ExecUrlSchemeHandler.h  ObjUrlSchemeHandler.cpp  ObjUrlSchemeHandler.h  QspUrlSchemeHandler.cpp  QspUrlSchemeHandler.h  QspWebEngineUrlRequestInterceptor.cpp  QspWebEngineUrlRequestInterceptor.h  fastqspwindow.cpp  fastqspwindow.h  main.cpp  qsp_callback.cpp  qsp_callback.h  qsp_htmlbuilder.h  url_schemes.cpp  url_schemes.h
qsp/: CMakeLists.txt  actions.h  coding.cpp  declarations.h  game.cpp  game.h  jack.cpp  qsp.pro  regexp.h  text.cpp  text.h
qsp/bindings/android/: android_control.cpp
qsp/bindings/default/: default_control.cpp
qsp/bindings/flash/: flash_control.cpp
qsp/bindings/java/: java_control.cpp
qsp/include/qsp/: jack.h
qsp/include/qsp/default/: qsp_default.h
qsp/src/: actions.cpp  coding.cpp  coding.h  common.cpp  common.h  declarations.h  game.cpp  game.h  jack.cpp  locations.cpp  mathops.cpp  playlist.cpp  text.cpp  text.h  variables.cpp  variant.cpp
qsp/src/android/: android_callbacks.cpp  android_coding.cpp  android_control.cpp
qsp/src/default/: default_callbacks.cpp  default_coding.cpp  default_control.cpp
qsp/src/flash/: flash_callbacks.cpp  flash_coding.cpp  flash_control.cpp
qsp/src/java/: java_callbacks.cpp  java_coding.cpp  java_control.cpp
qsp/test/: CMakeLists.txt  game_tests.cpp  main.cpp  variant_tests.cpp
qsp/test/assets/: save.sav  test.qproj  test.qsp
qsp/test/assets/json/: 0_variable.json  1_variable.json  2.json  text_test.json
